<resources>
    <string name="app_name">Key App</string>
    <string name="common_beta">beta</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_retry">Retry</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_done">Done</string>
    <string name="common_close">Close</string>
    <string name="common_great">Great!</string>
    <string name="common_settings">Settings</string>
    <string name="common_copied">Copied to clipboard</string>
    <string name="common_copied_with_emoji">👯‍ Copied to the clipboard</string>
    <string name="common_usd">USD</string>
    <string name="common_continue">Continue</string>
    <string name="common_username_allowed_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-</string>
    <string name="common_username_search_allowed_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-.</string>
    <string name="common_na">N/A</string>
    <string name="common_yesterday">Yesterday</string>
    <string name="common_today">Today</string>
    <string name="common_try_again">Try again</string>
    <string name="common_go_back">Go back</string>
    <string name="common_not_available">N/A</string>
    <string name="common_not_implemented_yet">Not implemented yet</string>
    <string name="common_understood">Understood</string>
    <string name="common_btc">BTC</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_logout">Log out</string>
    <string name="common_stay">Stay</string>
    <string name="common_close_account">Close account</string>
    <string name="common_commas">…</string>
    <string name="common_transaction_details">Transaction details</string>
    <string name="common_error">Error</string>
    <string name="common_hide">Hide</string>
    <string name="common_show">Show</string>
    <string name="common_skip">Skip</string>
    <string name="common_cash_out">Cash out</string>
    <string name="common_cash_out_token">Cash out token</string>
    <string name="common_go_to_swap">Go to swap</string>
    <string name="common_sell_all">Sell all</string>
    <string name="common_sorry">Sorry</string>
    <string name="common_less_than_minimum">Less than 0.01</string>
    <string name="not_available">N/A</string>
    <string name="storage_permission_alert_message">The application needs storage permission to save QrCode Image</string>
    <string name="storage_permission_alert_title">Permission required</string>
    <string name="camera_permission_alert_message">The application needs camera permission to start scanning</string>
    <string name="camera_permission_alert_title">Permission required</string>
    <string name="camera_permission_not_granted">Camera permission denied</string>
    <string name="error_title">Error occurred</string>
    <string name="error_general_title">Unknown error</string>
    <string name="error_general_message">❌ Something went wrong. Please, try again</string>
    <string name="error_network_title">Connection error</string>
    <string name="error_network_message">Your connection to the Internet has been interrupted.</string>
    <string name="error_no_internet_message">🥺 You have no internet connection</string>
    <string name="error_invalid_transaction">Invalid transaction, please try again</string>
    <string name="error_amount">Amount error. Please enter valid amount</string>
    <string name="error_fetching_data_about_token">Couldn\'t fetch information for %s</string>
    <string name="error_invalid_address">Invalid address, please enter correct one</string>
    <string name="error_unable_to_swap_this_pair">Unable to swap this pair this time</string>
    <string name="error_opening_file">Couldn\'t open the file</string>
    <string name="error_rates_error">Cannot get rates</string>
    <string name="error_take_screenshot">Failed to take a screenshot</string>
    <string name="error_insufficient_funds">Insufficient funds</string>
    <string name="error_invalid_blockhash">Invalid blockhash</string>
    <string name="error_slippage_limit">Low slippage caused the swap to fail</string>
    <string name="error_history_message">We couldn\'t upload the history.\nTry again later</string>
    <string name="error_country_not_found">Sorry, we don’t know a such country</string>
    <string name="error_wallet_not_found_title">No wallet found</string>
    <string name="error_wallet_not_found_message">Try account or use an another phone number</string>
    <string name="error_too_often_otp_requests_message">You request SMS too often. Try later.</string>
    <string name="error_shares_do_not_matches_title">No wallet found</string>
    <string name="error_shares_do_not_matches_message">Try another option</string>
    <string name="error_repeat_social_auth">Repeat social auth</string>
    <string name="error_solana_network">😞 Solana has some problems</string>
    <string name="auth_security_key_title">New wallet creation</string>
    <string name="auth_verify_security_key_title">Verify your security key</string>
    <string name="auth_select_word">Select word #%d</string>
    <string name="auth_onboarding_subtitle">Secure non-custodial bank of the future\nSimple finance for everyone</string>
    <string name="auth_decline">Decline</string>
    <string name="auth_accept">Accept</string>
    <string name="auth_agree_terms_and_privacy">By continuing, you agree wallet\'s Terms of Use and Privacy Policy</string>
    <string name="auth_terms_of_use">Terms of Use</string>
    <string name="auth_privacy_policy">Privacy Policy</string>
    <string name="auth_your_security_key">Your security key</string>
    <string name="auth_recover_info">To recover your wallet enter your security key\'s 12 or 24 words separated by single spaces in the correct order.</string>
    <string name="auth_seed_phrase_limit">Secret phrase can\'t contain more than 12 words</string>
    <string name="auth_security_key_hint">Write down or duplicate these words in the correct order and keep them in a safe place. Copy them manually</string>
    <string name="auth_copy_to_clipboard">Copy to clipboard</string>
    <string name="auth_confirm_words_save">I have saved these words in a safe place.</string>
    <string name="auth_next">Next</string>
    <string name="auth_have_wallet">I already have a wallet</string>
    <string name="auth_restore_manually">Restore manually</string>
    <string name="auth_restore">Restore</string>
    <string name="auth_reset_and_try_again">Reset and try again</string>
    <string name="auth_create_new_wallet">Create a new wallet</string>
    <string name="auth_create_new_wallet_message">The following words are the security key that you must keep in a safe place, written in the correct sequence.\n\nIf lost, no one can restore it.\nKeep it private, even from us</string>
    <string name="auth_reset_pin">Reset PIN with a seed phrase</string>
    <string name="auth_finish_setup">Start using Key App</string>
    <string name="auth_enable_faceid">Enable FaceID</string>
    <string name="auth_enable_touchid">Enable TouchID</string>
    <string name="auth_enable_faceid_question">Use your FaceID for quick access?</string>
    <string name="auth_enable_touchid_question">Use your TouchID for quick access?</string>
    <string name="auth_no_biometric_detected">No biometric detected, cannot enable quick access</string>
    <string name="auth_do_later">Do this later</string>
    <string name="auth_intro_message"> Your Key App is fully set up.\nGet ready to explore the Crypto world</string>
    <string name="auth_refresh">Refresh</string>
    <string name="auth_copied">Copied!</string>
    <string name="auth_create_pin_code">Set up a wallet PIN</string>
    <string name="auth_enter_pin_code">Enter PIN</string>
    <string name="auth_enter_current_pin_code">Enter current PIN</string>
    <string name="auth_repeat_new_pin_code">Confirm PIN</string>
    <string name="auth_almost_done_title">Almost done</string>
    <string name="auth_quick_access">Quick Access</string>
    <string name="auth_biometric_question">Use biometric for quick access?</string>
    <string name="auth_pin_codes_match_error">PIN doesn\'t  match. Please try again</string>
    <string name="auth_locked_message">We’ve locked your wallet, try again in a %s seconds or reset it with a seed phrase.</string>
    <string name="auth_welcome_back">Welcome back!</string>
    <string name="auth_go_to_wallet">Go to wallet</string>
    <string name="auth_logout">Log out</string>
    <string name="auth_done">Done</string>
    <string name="auth_wrong_seed_phrase_empty">Seed phrase is empty</string>
    <string name="auth_select_derivation_path">Select Derivation Path</string>
    <string name="auth_reserve_username">Reserve your  username</string>
    <string name="auth_you_can_receive">Username is your public address, which allows you to receive any token even if you don\'t have it in the wallet list.\n\nIt is vital you select the exact username you want, as once set, you cannot change it.</string>
    <string name="auth_you_can_skip">You can also skip this step and reserve a username later.</string>
    <string name="auth_your_username">Your username</string>
    <string name="auth_enter_your_username">Enter your username</string>
    <string name="auth_reserve">Reserve</string>
    <string name="auth_not_yet_reserved">Not yet reserved</string>
    <string name="auth_use_any_latin">No more than 15 alphanumerical latin lowercase characters and dashes</string>
    <string name="auth_skip_this_step">You can also skip this step and reserve a username later.</string>
    <string name="auth_clickable_skip_this_step">skip this step</string>
    <string name="main_reserve_username">Reserve your username now</string>
    <string name="main_reserve_username_message">Any token can be received using username regardless of whether it is in your wallets list</string>
    <string name="send_zero_usd">$0</string>
    <string name="buy_token_on_moonpay">Buy %s on MoonPay</string>
    <string name="buy_you_pay">You pay</string>
    <string name="buy_you_get">You get</string>
    <string name="buy_token_price">%s price</string>
    <string name="buy_zero_token">0 %s</string>
    <string name="buy_token_purchase_cost">%s purchase cost</string>
    <string name="buy_processing_fee">Processing fee</string>
    <string name="buy_network_fee">Network fee</string>
    <string name="buy_extra_fee">Extra fee</string>
    <string name="buy_account_creation">%s account creation</string>
    <string name="buy_one_time_payment">One time payment</string>
    <string name="buy_total">Total</string>
    <string name="buy_continue_on_moonpay">Continue on Moonpay</string>
    <string name="settings_what_is_a_security_key">What is a security key?</string>
    <string name="seed_info_the_definition">The definition</string>
    <string name="seed_info_description">You can compare a cryptocurrency wallet to\na password manager for crypto, and a\nsecurity key to a master password.\n\nA security key is a series of 12 or 24 words\ngenerated by the wallet that give you access\nto its associated crypto.</string>
    <string name="seed_info_description_secondary">If you create a new wallet account, you will receive your security key that you must write down somewhere safe. This is the only way to recover your wallet.\n\nIf you still have access to your old wallet, sometimes you can recover your security key from it.\n\nUsing Custodian wallet, you still have the option to regain access to your data by asking a third party.</string>
    <string name="seed_info_info">• If lost, no one can restore it\n• Keep it private, even from us</string>
    <string name="seed_info_where_i_can_find">Where I can find one?</string>
    <string name="sell_error_body_message">Our payment service was ruined.\nVisit this page later</string>
</resources>