<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/buy_token_on_moonpay"
            app:titleTextAppearance="@style/WalletTheme.TextAppearance.SemiBold18" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:visibility="invisible"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/buy_you_pay"
                    android:textAppearance="@style/WalletTheme.TextAppearance.SemiBold16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/payEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="@string/send_zero_usd"
                    android:inputType="numberDecimal"
                    android:minWidth="72dp"
                    android:singleLine="true"
                    android:textAppearance="@style/WalletTheme.TextAppearance.SemiBold24"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="@id/payTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/payTextView"
                    app:layout_constraintTop_toTopOf="@id/payTextView" />

                <TextView
                    android:id="@+id/errorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/WalletTheme.TextAppearance.Regular12"
                    android:textColor="@color/systemErrorMain"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/payEditText"
                    app:layout_constraintTop_toBottomOf="@id/payEditText"
                    tools:text="Minimum amount for the purchase is $30"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/strokeSecondary"
                    app:layout_constraintTop_toBottomOf="@id/errorTextView" />

                <TextView
                    android:id="@+id/getTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/buy_you_get"
                    android:textAppearance="@style/WalletTheme.TextAppearance.SemiBold16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/getValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_gray_stroked"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:singleLine="true"
                    android:text="@string/buy_zero_token"
                    android:textAppearance="@style/WalletTheme.TextAppearance.SemiBold14"
                    android:textColor="@color/textIconPrimary"
                    app:drawableEndCompat="@drawable/ic_exchange"
                    app:layout_constraintBottom_toBottomOf="@id/getTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/getTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/priceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            app:optionsLabelText="@string/buy_token_price" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/strokeSecondary"
            app:layout_constraintTop_toBottomOf="@id/payTextView" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/purchaseCostView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            app:optionsLabelText="@string/buy_token_purchase_cost" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/processingFeeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            app:optionsLabelText="@string/buy_processing_fee" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/networkFeeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            app:optionsLabelText="@string/buy_network_fee" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/extraFeeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            app:optionsLabelText="@string/buy_extra_fee" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/accountCreationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            android:visibility="gone"
            app:optionsLabelText="@string/buy_account_creation"
            app:optionsText="@string/buy_one_time_payment" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/strokeSecondary"
            app:layout_constraintTop_toBottomOf="@id/payTextView" />

        <org.p2p.wallet.common.ui.widget.OptionsTextView
            android:id="@+id/totalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="12dp"
            app:optionsLabelText="@string/buy_total" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <org.p2p.wallet.common.ui.widget.ProgressButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            app:buttonEnabled="false"
            app:buttonText="@string/buy_continue_on_moonpay" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>