<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bannerView"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_rounded_stroke"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/bannerImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/bg_rounded"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_banner"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reserveTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/main_reserve_username"
            android:textAppearance="@style/WalletTheme.TextAppearance.Bold16" />

        <TextView
            android:id="@+id/reserveMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/main_reserve_username_message"
            android:textAppearance="@style/WalletTheme.TextAppearance.Regular12" />
    </LinearLayout>

    <TextView
        android:id="@+id/reserveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/auth_reserve"
        android:textAppearance="@style/WalletTheme.TextAppearance.Bold14"
        android:textColor="?colorAccentPrimary" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="120dp"
        android:padding="16dp"
        android:text="@string/common_cancel"
        android:textAppearance="@style/WalletTheme.TextAppearance.Bold14"
        android:textColor="?colorAccentPrimary" />
</FrameLayout>